--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,3 +2,20 @@
 	background: #ffc107;
 	color: white;
 }
+
+.caixa {
+	padding: 60px 0;
+	border-bottom: 1px solid #e5e5e5;
+}
+
+footer p a {
+	margin: 5px 15px;
+}
+
+a {
+	text-decoration: none;
+}
+
+.ms-logo{
+	margin-left: 82px;
+}
